# XPBD_EXP

./: CMakeLists.txt  README.md  debug.py  run.py
include/: gm.h  light_array.h
src/: main.cpp
src/old/: sphere_renderer.cpp  sphere_renderer.h
src/physics/: collider.cpp  collider.h  collision_broad_phase.cpp  collision_broad_phase.h  collision_narrow_phase.cpp  collision_narrow_phase.h  constraint.h  entity.cpp  entity.h  physics_util.cpp  physics_util.h  xpbd.cpp  xpbd.h
src/render/: cube_mesh.cpp  cube_mesh.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  sphere_mesh.cpp  sphere_mesh.h
tests/: test_collision_broad_phase.cpp
tutorial/: SDF_collision.md  dynamic_aabb_tree.md  narrow_phase_algorithm.md  sphere_mesh_make.md
